--- a/spec/fixtures/views/competitions_documents_duplicate_competition_uses_create_method-presets/view.html
+++ b/spec/fixtures/views/competitions_documents_duplicate_competition_uses_create_method-presets/view.html
@@ -151,6 +151,7 @@ Erweitert
 <div class='card-body'>
 <p>Du kannst auch einen vorhandenen Wettkampf als Vorlage wählen. Dafür wähle bitte einen Wettkampf aus. Es werden dann Disziplinen, Wertungen, Wertungsgruppen und Ergebnisse übernommen. Mannschaften, Wettkämpfer und Startlisten bleiben leer.</p>
 <div class="form-group select optional duplication_duplicate_from_id"><label class="control-label select optional" for="duplication_duplicate_from_id">Kopieren von</label><select class="form-select select optional" name="duplication[duplicate_from_id]" id="duplication_duplicate_from_id"><option value="" label=" "></option>
+<option value="UUID">2024-02-29 D-Cup</option>
 <option value="UUID">2024-02-29 MV-Cup</option></select></div>
 
 </div>
