Reihenfolge von Startlisten auch tauschbar machen

--- a/app/assets/stylesheets/_sortable.sass
+++ b/app/assets/stylesheets/_sortable.sass
@@ -16,7 +16,7 @@
   100%
     opacity: 1
 
-.sorted-table tbody tr, .sortable-list
+.sorted-table.move tbody tr, .sortable-list
   cursor: move
 
 .sortable-chosen
