--- a/spec/fixtures/views/competitions_score_results_berechnungshilfen_allows_to_create_zweikampf_results/view.html
+++ b/spec/fixtures/views/competitions_score_results_berechnungshilfen_allows_to_create_zweikampf_results/view.html
@@ -150,6 +150,34 @@ Erweitert
 </div>
 </div>
 </div>
+<div class='row g-4'>
+<div class='col-lg-8'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Berechnungshilfen</h4>
+</div>
+</div>
+<table class='table'>
+<tr>
+<th>Wertung</th>
+<th></th>
+</tr>
+<tr>
+<td>
+<img src="/assets/disciplines/hl.svg" width="20" height="20" />
+Hakenleitersteigen - Frauen
+</td>
+<td class='text-end'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID">Ansehen</a>
+</td>
+</tr>
+</table>
+
+
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
