--- a/spec/fixtures/views/competitions_score_results_zweikampf_allows_to_create_zweikampf_results-edit/view.html
+++ b/spec/fixtures/views/competitions_score_results_zweikampf_allows_to_create_zweikampf_results-edit/view.html
@@ -156,6 +156,11 @@ Erweitert
 <div class="form-group date optional score_result_date"><label class="date optional" for="score_result_date">Datum</label><div class="d-flex flex-row justify-content-between align-items-center"><input class="form-control mx-1 date optional" type="date" name="score_result[date]" id="score_result_date" /></div><small class="form-text text-muted">Mit Angabe dieses Datums kann man das allgemeine Datum des Wettkampfes auf dem PDF überschreiben. Dies ist nützlich, wenn der Wettkampf über mehrer Tage geht.</small></div>
 </div>
 </div>
+<div class='row'>
+<div class='col-lg-6'>
+<fieldset class="form-group boolean optional score_result_calculation_help"><div class="form-check"><input name="score_result[calculation_help]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_result[calculation_help]" id="score_result_calculation_help" /><label class="form-check-label boolean optional" for="score_result_calculation_help">Berechnungshilfe</label><small class="form-text text-muted">Die Liste dient nur als Berechnungshilfe und wird in der Auflistung ganz unten angezeigt.</small></div></fieldset>
+</div>
+</div>
 </fieldset>
 
 </div>
