Hinweis auf Drehen des Geräts geben
closes #58

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -143,6 +143,14 @@
 .hide-xs
   @include media-breakpoint-only(xs)
     display: none
+td.xs-rotate-hint
+  background-color: $accent2
+  text-align: center
+  font-style: italic
+
+  @include media-breakpoint-up(sm)
+    display: none
+
 
 .scroll-x
   overflow-x: auto
