--- a/app/views/competitions/score/results/_result_table_group.html.haml
+++ b/app/views/competitions/score/results/_result_table_group.html.haml
@@ -16,6 +16,7 @@
         %th.hide-xs{ title: result.name }= discipline_image(result.discipline_key)
 
 
+  = tr_xs_rotate_hint
   - rows.each do |row|
     %tr
       - if places
