--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show-with-results/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show-with-results/view.html
@@ -227,6 +227,7 @@ Ja
 <th>Bestzeit</th>
 <th class='hide-xs'>Lauf 1</th>
 </tr>
+<tr><td colspan="100" class="xs-rotate-hint">Gerät drehen, um mehr Spalten zu sehen</td></tr>
 <tr>
 <td class='hide-xs'>1.</td>
 <td>
