--- a/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
+++ b/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
@@ -207,10 +207,12 @@ Hakenleitersteigen - Männlich
 <th>Punkte</th>
 </thead>
 <tbody>
+<tr><td colspan="100" class="xs-rotate-hint">Gerät drehen, um mehr Spalten zu sehen</td></tr>
 <tr>
 <td class='hide-xs'>1</td>
 <td>Frauen-Team</td>
 <td class='small'><table class='team_assessments'>
+<tr><td colspan="100" class="xs-rotate-hint">Gerät drehen, um mehr Spalten zu sehen</td></tr>
 <tr>
 <th class='hide-xs'>LA</th>
 <td>12,00 (10)</td>
@@ -225,6 +227,7 @@ Hakenleitersteigen - Männlich
 <td class='hide-xs'>2</td>
 <td>Frauen-Team</td>
 <td class='small'><table class='team_assessments'>
+<tr><td colspan="100" class="xs-rotate-hint">Gerät drehen, um mehr Spalten zu sehen</td></tr>
 <tr>
 <th class='hide-xs'>LA</th>
 <td>13,00 (9)</td>
