--- a/app/views/competitions/score/results/_result_table_single.html.haml
+++ b/app/views/competitions/score/results/_result_table_single.html.haml
@@ -15,6 +15,7 @@
       - result.results.each do |result|
         %th.hide-xs{ title: result.name }= discipline_image(result.discipline_key)
 
+  = tr_xs_rotate_hint
   - rows.each do |row|
     %tr
       - if places
