--- a/spec/fixtures/views/Team_with_fss_team_shows_team_badge-with-warning/view.html
+++ b/spec/fixtures/views/Team_with_fss_team_shows_team_badge-with-warning/view.html
@@ -171,6 +171,12 @@ M
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Ansehen</a>
 </td>
 </tr>
+<tr>
+<td colspan='2'></td>
+<td colspan='2'>
+<a title="Mannschaftsspalten als Block bearbeiten" class=" btn btn-light btn-sm" href="/2024/mv-cup/team_marker_block_values/edit?band_id=UUID">Spalten als Block</a>
+</td>
+</tr>
 </table>
 
 
