--- a/spec/fixtures/views/TeamMarkerBlockValue_team_marker_values_managements_uses_CRUD-teams2/view.html
+++ b/spec/fixtures/views/TeamMarkerBlockValue_team_marker_values_managements_uses_CRUD-teams2/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Mannschaften - MV-Cup - Feuerwehrsport</title>
+<title>MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -66,18 +66,6 @@ Benutzer
 <a class="nav-link" href="/2024/mv-cup">Informationen
 </a>
 </div>
-<div class='nav-item active'>
-<a class="nav-link active" aria-current="page" href="/2024/mv-cup/teams">Mannschaften
-</a>
-</div>
-<div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/score/lists">Startlisten
-</a>
-</div>
-<div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/score/results">Ergebnisse
-</a>
-</div>
 <div class='dropdown nav-item'>
 <a aria-expanded='false' class='nav-link dropdown-toggle' data-bs-toggle='dropdown' href='#' id='navbar-dropdown-menu-link' role='button'>
 Erweitert
@@ -125,6 +113,7 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
+<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
@@ -150,30 +139,38 @@ Erweitert
 <table class='table table-bordered'>
 <tr>
 <th>Name</th>
-<th class='small' style='width: 60px'><img title="Löschangriff Nass - Frauen" src="/assets/disciplines/la.svg" width="20" height="20" /></th>
 <td style='width: 60px; text-align: center' title='Angereist?'>
 <abbr title='Angereist?'>An</abbr>
+</td>
+<td style='width: 60px; text-align: center' title='Bezahlt?'>
+<abbr title='Bezahlt?'>Be</abbr>
+</td>
+<td style='width: 60px; text-align: center' title='Wünsche?'>
+<abbr title='Wünsche?'>Wü</abbr>
 </td>
 <th style='width: 200px'></th>
 </tr>
 <tr>
 <td>
-new-name
+Frauen-Team
 
 </td>
-<td title='Mannschaftswertung'>
-M
+<td style='width: 60px; text-align: center' title='Ja'>
+<a class="quick-team-marker-change-link btn btn-light btn-sm" data-url="/2024/mv-cup/teams/UUID/markers/UUID/edit?output=modal" href="/2024/mv-cup/teams/UUID/markers/UUID/edit"><i class="far fa-square-check"></i></a>
 </td>
-<td style='width: 60px; text-align: center' title=''>
-<a class="quick-team-marker-change-link btn btn-light btn-sm" data-url="/2024/mv-cup/teams/UUID/markers/UUID/edit?output=modal" href="/2024/mv-cup/teams/UUID/markers/UUID/edit"><i class="far fa-square"></i></a>
+<td style='width: 60px; text-align: center' title='15.06.2025'>
+<a class="quick-team-marker-change-link btn btn-light btn-sm" data-url="/2024/mv-cup/teams/UUID/markers/UUID/edit?output=modal" href="/2024/mv-cup/teams/UUID/markers/UUID/edit"><i class="far fa-square-check"></i></a>
+</td>
+<td style='width: 60px; text-align: center' title='test values'>
+<a class="quick-team-marker-change-link btn btn-light btn-sm" data-url="/2024/mv-cup/teams/UUID/markers/UUID/edit?output=modal" href="/2024/mv-cup/teams/UUID/markers/UUID/edit"><i class="far fa-square-check"></i></a>
 </td>
 <td class='text-end'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Ansehen</a>
 </td>
 </tr>
 <tr>
-<td colspan='2'></td>
-<td colspan='2'>
+<td colspan='1'></td>
+<td colspan='4'>
 <a title="Mannschaftsspalten als Block bearbeiten" class=" btn btn-light btn-sm" href="/2024/mv-cup/team_marker_block_values/edit?band_id=UUID">Spalten als Block</a>
 </td>
 </tr>
